# multi_map_manager

./: .gitignore  README.md
.github/workflows/: ci.yaml
map_changer/: CMakeLists.txt  package.xml
map_changer/launch/: map_changer.launch  map_changer.launch.xml  waypoint_navigation_multi.launch.xml
map_changer/scripts/: map_changer.py
map_changer/test/: map0.yaml  map1.pgm  map1.yaml  map2.pgm  map2.yaml  merged_map.pgm  merged_map.yaml  raw_map1.pgm  raw_map1.yaml  raw_map2.pgm  raw_map2.yaml  raw_map3.pgm  raw_map3.yaml  raw_waypoints1.yaml  raw_waypoints2.yaml  raw_waypoints3.yaml  waypoints.yaml
map_merger/: map_merger.py  map_trimmer.py
map_merger/mylib/: application.py  mapdisp.py  tools.py  waypointlib.py
test/maps/nakaniwa/: mymap_nakaniwa_1.yaml  mymap_nakaniwa_2.yaml
test/multi_maps/nakaniwa/: waypoints.yaml
test/multi_maps/tsukuba/: map1.yaml  merged_map.yaml  waypoints.yaml
test/waypoints/nakaniwa/: waypoints_nakaniwa_1.yaml  waypoints_nakaniwa_2.yaml
test/waypoints/tsukuba/: waypoints_tsukuba_1.yaml  waypoints_tsukuba_2.yaml
