<?xml version="1.0"?>
<package format="2">
  <name>map_changer</name>
  <version>0.0.0</version>
  <description>The map_changer package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>

</package>
